Fixed bug of large paths not showing up on screen
By changing the horizontal alignment of the floating div with the history list

--- a/frontend/src/components/file-explorer/NavigationBar.css
+++ b/frontend/src/components/file-explorer/NavigationBar.css
@@ -11,9 +11,8 @@
     display: flex;
     width: 48px;
     height: 0px;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
-    margin-top: 15px;
 }
 
 .navigation-bar .MuiButton-root {
